# agentos

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  biome.json  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/refs/: README.md  secure-exec
.github/workflows/: bench.yml  ci-nightly.yml  ci.yml  publish.yaml  release.yml
crates/: CLAUDE.md
crates/agent-os-protocol/: Cargo.toml  build.rs
crates/agent-os-protocol/protocol/: agent_os_acp_v1.bare
crates/agent-os-protocol/src/: lib.rs
crates/agent-os-protocol/tests/: roundtrip.rs
crates/agent-os-sidecar/: CLAUDE.md  Cargo.toml
crates/agent-os-sidecar-browser/: Cargo.toml
crates/agent-os-sidecar-browser/src/: lib.rs
crates/agent-os-sidecar/src/: acp_extension.rs  lib.rs  main.rs
crates/agent-os-sidecar/tests/: acp_extension.rs  acp_request_timeout.rs
crates/agent-os-sidecar/tests/support/: bridge.rs
crates/agentos-sidecar/: Cargo.toml
crates/agentos-sidecar-browser/: Cargo.toml
crates/agentos-sidecar-browser/src/: lib.rs
crates/agentos-sidecar-core/: Cargo.toml
crates/agentos-sidecar-core/src/: engine.rs  json_rpc.rs
crates/agentos-sidecar-core/tests/: real_agent_round_trip.rs
crates/agentos-sidecar-core/tests/fixtures/: acp-echo-agent.mjs
crates/agentos-sidecar/src/: acp_extension.rs  lib.rs  main.rs  session_store.rs
crates/agentos-sidecar/src/acp/: mod.rs  restore.rs  runtime.rs  turn.rs
crates/agentos-sidecar/src/session_store/: performance_tests.rs
crates/agentos-sidecar/tests/: acp_adapter_restart.rs  acp_adapter_stderr.rs  acp_extension.rs  acp_request_timeout.rs
crates/bridge/: bridge-contract.json
crates/build-support/: v8_bridge_build.rs
crates/client/: Cargo.toml
crates/client/src/: agent_os.rs  command_line.rs  config.rs  cron.rs  error.rs  fs.rs  json_rpc.rs  lib.rs  net.rs  process.rs  session.rs  shell.rs  sidecar.rs  stream.rs  transport.rs
crates/client/tests/: exec_command_line_e2e.rs  fetch_e2e.rs  fs_e2e.rs  link_software_e2e.rs  native_root_mount_e2e.rs  opencode_session_e2e.rs  os_instructions_e2e.rs  packages_aospkg_e2e.rs  pi_session_e2e.rs  process_e2e.rs  scaffold.rs  session_e2e.rs  session_event_types.rs  shell_e2e.rs  shell_pty_packages_e2e.rs  wasm_command_mount_e2e.rs
crates/client/tests/common/: mod.rs
crates/execution/: CLAUDE.md  Cargo.toml  build.rs
crates/execution/assets/runners/: wasi-module.js  wasm-runner.mjs
crates/execution/src/: javascript.rs  node_import_cache.rs  python.rs  v8_host.rs  v8_runtime.rs  wasm.rs
crates/execution/tests/: cjs_esm_interop.rs  javascript_v8.rs  python.rs  wasi_path_open_read_not_blocked.rs  wasm_host_net_errno_contract.rs  wasm_nonblocking_stdin.rs
crates/native-sidecar/: Cargo.toml
crates/native-sidecar/src/: bindings.rs  bridge.rs  execution.rs  extension.rs  filesystem.rs  lib.rs  limits.rs  package_projection.rs  service.rs  state.rs  stdio.rs  vm.rs  vm_sqlite.rs
crates/native-sidecar/src/execution/: child_process.rs  coordinator.rs  launch.rs  mod.rs  process.rs  process_events.rs  signals.rs  stdio.rs
crates/native-sidecar/src/execution/javascript/: rpc.rs  sqlite.rs
crates/native-sidecar/src/execution/network/: http2.rs  tcp.rs  tls.rs  udp.rs  unix.rs
crates/native-sidecar/src/execution/python/: sockets.rs
crates/native-sidecar/src/plugins/: chunked_actor_sqlite.rs  host_dir.rs  js_bridge.rs
crates/native-sidecar/tests/: architecture_guards.rs  builtin_conformance.rs  chunked_actor_sqlite.rs  filesystem.rs  fs_read_options.rs  fs_watch_and_streams.rs  node_child_compat.rs  package_projection.rs  posix_path_repro.rs  projection_bench.rs  service.rs  signal.rs
crates/native-sidecar/tests/acp_legacy/: compat.rs
crates/native-sidecar/tests/fixtures/: limits-inventory.json
crates/sidecar-client/: Cargo.toml
crates/sidecar-client/src/: transport.rs
crates/v8-runtime/: build.rs
crates/vfs/: CLAUDE.md
docs/: filesystem.mdx
docs-internal/: acp-adapter-migration-status.md  acp-adapter-upstream-plan.md  gigacode-pr-risk-assessment.md  kernel-runtime-subsystem-map.md  native-runtime-fixes.md  registry-parity-worklist.md
docs/features/: typescript.mdx
docs/thin-client-research/: item-93-implementation.md  item-94-implementation.md
examples/agent-to-agent/: README.md  client.ts  package.json  server.ts
examples/agentos-typecheck/: package.json  tsconfig.json
examples/approvals/: README.md  auto-approve-client.ts  auto-approve.ts  client.ts  human-in-the-loop.ts  package.json  selective-client.ts  selective.ts
examples/authentication/: README.md  client.ts  package.json  server.ts
examples/bindings/: README.md  client.ts  package.json  server.ts  tsconfig.json
examples/browser-terminal/: README.md  package.json
examples/browserbase/: client-agent.ts  client-direct.ts  client.ts  package.json  (+2 more)
registry/: CONTRIBUTING.md  README.md
scripts/: check-agent-os-client-protocol-compat.mjs  check-agent-os-client-protocol-compat.test.mjs  check-layout.mjs  check-layout.test.mjs  check-no-escaping-local-deps.mjs  check-no-escaping-local-deps.test.mjs  check-registry-software-split.mjs  check-registry-software-split.test.mjs  check-registry-test-runtime-boundary.mjs  check-registry-test-runtime-boundary.test.mjs  check-rust-package-metadata.mjs  check-rust-package-metadata.test.mjs  check-secure-exec-package-boundary.mjs  check-secure-exec-package-boundary.test.mjs  check-secure-exec-rust-boundary.sh  check-secure-exec-rust-boundary.test.sh  check-stale-split-names.mjs  check-stale-split-names.test.mjs  check-ts-split-boundary.mjs  check-ts-split-boundary.test.mjs  ci.sh  package.json  secure-exec-dep.mjs  verify-check-types.mjs  verify-file-deps.mjs  verify-fixed-versions.mjs  verify-fixed-versions.test.mjs
test-harness/: package.json  tsconfig.json
toolchain/: Makefile  codex-ref
toolchain/crates/commands/spawn-test-host/: Cargo.toml
toolchain/crates/commands/spawn-test-host/src/: main.rs
website/: .gitignore  Dockerfile  astro.config.mjs  docs.config.mjs  package.json  tailwind.config.mjs  typedoc.json
(+706 files in other folders)
