[workspace]
resolver = "2"
members = [
    "crates/agentos-protocol",
    "crates/agentos-sidecar",
    # NOTE: crates/agentos-sidecar-browser is intentionally excluded from the
    # default workspace members. It path/version-depends on
    # `secure-exec-sidecar-browser`, which secure-exec does not publish to
    # crates.io. It is unrelated to the actor-plugin cdylib + sidecar binary the
    # preview ships. Re-add it once secure-exec publishes the browser crate.
    "crates/client",
    "crates/agentos-actor-plugin",
]

[workspace.package]
version = "0.2.0-rc.3"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/rivet-dev/agent-os"

# AgentOS crates are published as a lock-step chain. Secure Exec is consumed as
# normal crates.io dependencies so CI/publish builds do not need a sibling
# checkout.
[workspace.dependencies]
agentos-bridge = { package = "secure-exec-bridge", version = "0.3.1-rc.3" }
agentos-protocol = { path = "crates/agentos-protocol", version = "0.2.0-rc.3" }
agentos-sidecar = { path = "crates/agentos-sidecar", version = "0.2.0-rc.3" }
agentos-sidecar-browser = { path = "crates/agentos-sidecar-browser", version = "0.2.0-rc.3" }
agentos-kernel = { package = "secure-exec-kernel", version = "0.3.1-rc.3" }
agentos-execution = { package = "secure-exec-execution", version = "0.3.1-rc.3" }
agentos-v8-runtime = { package = "secure-exec-v8-runtime", version = "0.3.1-rc.3" }
secure-exec-client = { version = "0.3.1-rc.3" }
secure-exec-bridge = { version = "0.3.1-rc.3" }
secure-exec-sidecar = { version = "0.3.1-rc.3" }
secure-exec-vm-config = { version = "0.3.1-rc.3" }
vbare = "0.0.4"
vbare-compiler = { package = "rivet-vbare-compiler", version = "0.0.5" }
