[workspace]
resolver = "2"
exclude = ["software", "crates/agentos-sidecar-core"]
members = [
    "crates/actor-uds-client",
    "crates/agentos-protocol",
    "crates/agentos-sidecar",
    "crates/agentos-sidecar-browser",
    "crates/client",
    "crates/bridge",
    "crates/build-support",
    "crates/execution",
    "crates/kernel",
    "crates/native-baseline",
    "crates/native-sidecar",
    "crates/native-sidecar-browser",
    "crates/native-sidecar-core",
    "crates/runtime",
    "crates/sidecar-client",
    "crates/sidecar-protocol",
    "crates/v8-runtime",
    "crates/vfs",
    "crates/vfs-store",
    "crates/vm-config",
]
# Browser support is intentionally retained in-tree but disabled while the
# unified native sidecar reactor lands. Keep these two crates out of ordinary
# workspace commands so dormant browser code cannot block native CI.
default-members = [
    "crates/agentos-protocol",
    "crates/agentos-sidecar",
    "crates/client",
    "crates/bridge",
    "crates/build-support",
    "crates/execution",
    "crates/kernel",
    "crates/native-baseline",
    "crates/native-sidecar",
    "crates/native-sidecar-core",
    "crates/runtime",
    "crates/sidecar-client",
    "crates/sidecar-protocol",
    "crates/v8-runtime",
    "crates/vfs",
    "crates/vfs-store",
    "crates/vm-config",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/rivet-dev/agent-os"

# AgentOS crates are published as a lock-step chain and are self-contained in
# this workspace.
[workspace.dependencies]
agentos-actor-uds-client = { path = "crates/actor-uds-client", version = "0.0.1" }
agentos-bridge = { path = "crates/bridge", version = "0.0.1" }
agentos-build-support = { path = "crates/build-support", version = "0.0.1" }
agentos-execution = { path = "crates/execution", version = "0.0.1" }
agentos-kernel = { path = "crates/kernel", version = "0.0.1" }
agentos-native-baseline = { path = "crates/native-baseline", version = "0.0.1" }
agentos-native-sidecar = { path = "crates/native-sidecar", version = "0.0.1" }
agentos-native-sidecar-browser = { path = "crates/native-sidecar-browser", version = "0.0.1" }
agentos-native-sidecar-core = { path = "crates/native-sidecar-core", version = "0.0.1" }
agentos-runtime = { path = "crates/runtime", version = "0.0.1" }
agentos-protocol = { path = "crates/agentos-protocol", version = "0.0.1" }
agentos-sidecar-client = { path = "crates/sidecar-client", version = "0.0.1" }
agentos-sidecar = { path = "crates/agentos-sidecar", version = "0.0.1" }
agentos-sidecar-browser = { path = "crates/agentos-sidecar-browser", version = "0.0.1" }
agentos-sidecar-protocol = { path = "crates/sidecar-protocol", version = "0.0.1" }
agentos-v8-runtime = { path = "crates/v8-runtime", version = "0.0.1" }
agentos-vfs = { path = "crates/vfs-store", version = "0.0.1" }
agentos-vm-config = { path = "crates/vm-config", version = "0.0.1" }
vfs = { package = "agentos-vfs-core", path = "crates/vfs", version = "0.0.1" }
vbare = "0.0.4"
vbare-compiler = { package = "rivet-vbare-compiler", version = "0.0.5" }
