[package]
name = "agent-os-sidecar-browser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Browser Agent OS sidecar wrapper"

[dependencies]
agent-os-protocol = { workspace = true }
agent-os-sidecar = { workspace = true }
secure-exec-bridge = { workspace = true }
secure-exec-sidecar-browser = { workspace = true }
