[package]
name = "agent-os-sidecar"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native Agent OS sidecar binary"

[lib]
name = "agent_os_sidecar_wrapper"

[[bin]]
name = "agent-os-sidecar"
path = "src/main.rs"

[dependencies]
agent-os-protocol = { workspace = true }
serde_json = "1.0"
serde_bare = "0.5"
secure-exec-sidecar = { workspace = true }
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[dev-dependencies]
agent-os-bridge = { workspace = true }
