[package]
name = "agentos-sidecar-core"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/rivet-dev/agent-os"
description = "Host-free Agent OS sidecar core (ACP state machine), shared by the native and wasm/browser sidecars"
publish = false

# Host-free ONLY: no tokio, no std::fs/host IO, no native agentos-native-sidecar.
# This crate must compile to wasm32 so the browser sidecar can run the ACP logic.
[dependencies]
agentos-protocol = { path = "../agentos-protocol", version = "0.0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_bare = "0.5"
serde_json = "1.0"
