[package]
name = "agentos-sidecar"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native Agent OS sidecar binary"

[lib]
name = "agentos_sidecar_wrapper"

[[bin]]
name = "agentos-sidecar"
path = "src/main.rs"

[dependencies]
agent-client-protocol-schema = { workspace = true }
agentos-protocol = { workspace = true }
serde_json = "1.0"
serde_bare = "0.5"
base64 = "0.22"
sha2 = "0.10"
agentos-native-sidecar = { workspace = true }
agentos-runtime = { workspace = true }
chrono = { version = "0.4", features = ["clock"] }
nix = { version = "0.29", features = ["fs"] }
tokio = { version = "1", features = ["sync", "time", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-logfmt = { version = "0.3", features = ["ansi_logs"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
agentos-actor-uds-client = { workspace = true }
agentos-bridge = { workspace = true }
agentos-vm-config = { workspace = true }
async-trait = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }
tempfile = "3"
tokio = { version = "1", features = ["io-util", "net"] }
vbare.workspace = true
