[package]
name = "agentos-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "High-level Rust client SDK for the Agent OS native sidecar (1:1 port of the TypeScript AgentOs client)"

[dependencies]
# Reuse the secure-exec BARE wire schema + IPC transport. No new wire types are defined here.
agent-client-protocol-schema = { workspace = true }
agentos-sidecar-client = { workspace = true }
agentos-vm-config = { workspace = true }
agentos-protocol = { workspace = true }
agentos-bridge = { workspace = true }

anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
http = "1"
once_cell = "1"
parking_lot = "0.12"
scc = "2"
serde = { version = "1.0", features = ["derive"] }
serde_bare = "0.5"
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
