[package]
name = "agent-os-execution"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native execution plane scaffold for Agent OS"
build = "build.rs"

[lib]
doctest = false

[dependencies]
agent-os-bridge = { path = "../bridge" }
agent-os-v8-runtime = { path = "../v8-runtime" }
base64 = "0.22"
ciborium = "0.2"
getrandom = "0.2"
nix = { version = "0.29", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync", "time"] }

[dev-dependencies]
tempfile = "3"
wat = "1"
